5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1764_1189.log
== SUBMITION (2019-05-21 02:16:21) 
-- CODE:
from numpy import *
-- EXECUTION TIME:
2.14603
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:

-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:

-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 02:16:32) 
-- CODE:
from numpy import *
-- EXECUTION TIME:
0.563846
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:

-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:

-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:40:08) 
-- CODE:
from numpy import *
-- EXECUTION TIME:
0.58936
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:

-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:

-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:35:59) 
-- CODE:
from numpy import *

s = input()

t = replace(s)

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.473653
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 5, in <module>
    t = replace(s)
NameError: name 'replace' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:36:01) 
-- CODE:
from numpy import *

s = input()

t = replace(s)

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.493625
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 5, in <module>
    t = replace(s)
NameError: name 'replace' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:36:03) 
-- CODE:
from numpy import *

s = input()

t = replace(s)

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:36:16) 
-- CODE:
from numpy import *

s = input()

t = strip(s)

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.374512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 5, in <module>
    t = strip(s)
NameError: name 'strip' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:36:17) 
-- CODE:
from numpy import *

s = input()

t = strip(s)

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.365102
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 5, in <module>
    t = strip(s)
NameError: name 'strip' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:36:18) 
-- CODE:
from numpy import *

s = input()

t = strip(s)

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:37:31) 
-- CODE:
from numpy import *

s = input()

t = s.strip()

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:37:43) 
-- CODE:
from numpy import *

s = input()

print(s.strip())

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.475546
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 7, in <module>
    if t[-1] == t[0]:
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:37:45) 
-- CODE:
from numpy import *

s = input()

print(s.strip())

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.443948
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 7, in <module>
    if t[-1] == t[0]:
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:37:46) 
-- CODE:
from numpy import *

s = input()

print(s.strip())

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:37:55) 
-- CODE:
from numpy import *

s = input().upper()

print(s.strip())

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.436906
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 7, in <module>
    if t[-1] == t[0]:
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:37:57) 
-- CODE:
from numpy import *

s = input().upper()

print(s.strip())

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.51971
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 7, in <module>
    if t[-1] == t[0]:
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:37:58) 
-- CODE:
from numpy import *

s = input().upper()

print(s.strip())

if t[-1] == t[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:38:08) 
-- CODE:
from numpy import *

s = input().upper()

print(s.strip())

if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:39:24) 
-- CODE:
from numpy import *

s = input().upper()

x = (s.strip())
print(x.replace(" ", ""))
if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.442424
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:39:24) 
-- CODE:
from numpy import *

s = input().upper()

x = (s.strip())
print(x.replace(" ", ""))
if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:39:56) 
-- CODE:
from numpy import *

s = input().upper()


print(x.replace(" ", ""))
if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.531766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 6, in <module>
    print(x.replace(" ", ""))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:39:58) 
-- CODE:
from numpy import *

s = input().upper()


print(x.replace(" ", ""))
if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.529719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1189/main.py", line 6, in <module>
    print(x.replace(" ", ""))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:40:02) 
-- CODE:
from numpy import *

s = input().upper()

print(x.replace(" ", ""))

if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:40:13) 
-- CODE:
from numpy import *

s = input().upper()

print(s.replace(" ", ""))

if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- EXECUTION TIME:
0.409922
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:40:13) 
-- CODE:
from numpy import *

s = input().upper()

print(s.replace(" ", ""))

if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 02:53:52) 
-- CODE:
from numpy import *

s = input().upper()

print(s.replace(" ", ""))

if s[-1] == s[0]:
	print(1)
else:
	print(0)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
